kratos/config/kube/yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expedition-kratos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expedition-kratos
  template:
    metadata:
      labels:
        app: expedition-kratos
    spec:
      containers:
      - name: expedition-kratos
        image: "expedition-kratos:latest"
        args: ["serve", "--dev", "--config", "/etc/config/kratos/kratos.yaml"]
        imagePullPolicy: Never
        ports:
        - containerPort: 4433
        - containerPort: 4434
