kratos/config/kube/yaml/combined.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expedition-kratos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expedition-kratos
  template:
    metadata:
      labels:
        app: expedition-kratos
    spec:
      containers:
      - name: expedition-kratos
        image: "expedition-kratos:latest"
        args: ["serve", "--dev", "--config", "/etc/config/kratos/kratos.yaml"]
        imagePullPolicy: Never
        ports:
        - containerPort: 4433
        - containerPort: 4434
---
apiVersion: v1
kind: Service
metadata:
  name: expedition-kratos
  labels:
    app: expedition-kratos
spec:
  ports:
  - name: public
    port: 4433
    targetPort: 4433
  - name: admin
    port: 4434
    targetPort: 4434
  selector:
    app: expedition-kratos
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expedition-kratos
spec:
  rules:
    - host: kratos.expedition.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: expedition-kratos
                port:
                  name: public
    - host: admin.kratos.expedition.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: expedition-kratos
                port:
                  name: admin
